Working on the Dash app

--- a/web_prototyping.ipynb
+++ b/web_prototyping.ipynb
@@ -17,7 +17,7 @@
     "import plotly.express as px\n",
     "\n",
     "def main():\n",
-    "    st.title(\"My Interactive Data Visualization App\")\n",
+    "    st.title(\"Energy Demand Forecasting Application\")\n",
     "\n",
     "    st.header(\"Page 1\")\n",
     "    st.write(\"This is the first page.\")\n",
