--- a/walkthrough_2-14.ipynb
+++ b/walkthrough_2-14.ipynb
@@ -2,33 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import libraries"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +28,30 @@
     "\n",
     "# import custom module\n",
     "import scrubbing as scrb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Unemployment Level', 'Payroll Employment', 'CPI-U', 'HourlyPrecipitation', 'Energy Demand (MWH)', 'Labor Force Participation', 'HourlyRelativeHumidity', 'Labor Force Level', 'Civilian Noninstitutional Population', 'HourlyDewPointTemperature', 'HourlyDryBulbTemperature', 'Employment Population Ratio', 'Energy Price (cents-KWH)', 'HourlyWetBulbTemperature', 'HourlyWindSpeed', 'Unemployment Rate', 'HourlyStationPressure', 'Employment Level']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Specify the directory path\n",
+    "directory = r\"Plotly Figures/Raw Time Series\"\n",
+    "\n",
+    "# Get a list of all file names in the directory\n",
+    "variables = [x[:-4] for x in os.listdir(directory)]\n",
+    "\n",
+    "# Print the list of file names\n",
+    "print(variables)"
    ]
   },
   {
@@ -539,8 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# clean data and produce all exploratory data analysis plots\n",
-    "\n",
+    "# produce plots showing each variable as a time series\n",
     "\n",
     "\n",
     "# dash app to show time series plot for a single variable at a time"
