working on dropdown menus for first page of web app

--- a/walkthrough.ipynb
+++ b/walkthrough.ipynb
@@ -38,6 +38,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How to handle deleting existing data when re-running the whole pipeline?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
