working on python module for Forecasting class

--- a/walkthrough.ipynb
+++ b/walkthrough.ipynb
@@ -36,7 +36,7 @@
     "from prophet import Prophet\n",
     "\n",
     "# import custom module\n",
-    "import scrubbing as scrb\n",
+    "import preprocessing as scrb\n",
     "\n",
     "# prevent logging when fitting Prophet models\n",
     "import logging\n",
@@ -4179,7 +4179,6 @@
    ],
    "source": [
     "# make error forecasts\n",
-    "error_prophet_model\n",
     "df = error_prophet_model.make_future_dataframe(periods=evaluation_data.shape[0]+1, freq=\"H\")\n",
     "error_prophet_forecasts = error_prophet_model.predict(df)[[\"ds\", \"yhat\"]]\n",
     "error_prophet_forecasts = error_prophet_forecasts[error_prophet_forecasts[\"ds\"].isin(evaluation_data.index)][\"yhat\"].values\n",
@@ -45222,7 +45221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
