working on lstm and unit testing

--- a/src/lstm.ipynb
+++ b/src/lstm.ipynb
@@ -6,17 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import torch as t\n",
-    "import plotly.graph_objects as go\n",
-    "import seaborn as sns\n",
-    "from sklearn.model_selection import TimeSeriesSplit"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import torch as t\n",
+    "import plotly.graph_objects as go\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "import model_definitions as md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212299,10 +212310,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Parameter Absolute Value: 0.08814\n",
+      "Average Gradient Absolute Value: 0.56217\n",
+      "Epoch 1, Training Loss: 34.002795079658775\n",
+      "Epoch 1, Validation Loss: 25.351401329040527\n",
+      "Average Parameter Absolute Value: 0.09059\n",
+      "Average Gradient Absolute Value: 1.06720\n",
+      "Epoch 2, Training Loss: 27.811569788185835\n",
+      "Epoch 2, Validation Loss: 19.94857372926629\n",
+      "Average Parameter Absolute Value: 0.09224\n",
+      "Average Gradient Absolute Value: 1.03277\n",
+      "Epoch 3, Training Loss: 19.45564979579061\n",
+      "Epoch 3, Validation Loss: 11.136682095734969\n",
+      "Average Parameter Absolute Value: 0.09426\n",
+      "Average Gradient Absolute Value: 1.04776\n",
+      "Epoch 4, Training Loss: 12.577551085960689\n",
+      "Epoch 4, Validation Loss: 9.574045393777931\n",
+      "Average Parameter Absolute Value: 0.09558\n",
+      "Average Gradient Absolute Value: 0.76006\n",
+      "Epoch 5, Training Loss: 10.21337093596388\n",
+      "Epoch 5, Validation Loss: 9.305868312068608\n",
+      "Average Parameter Absolute Value: 0.09714\n",
+      "Average Gradient Absolute Value: 0.65923\n",
+      "Epoch 6, Training Loss: 8.825176487121675\n",
+      "Epoch 6, Validation Loss: 8.02164510022039\n",
+      "Average Parameter Absolute Value: 0.09949\n",
+      "Average Gradient Absolute Value: 0.65522\n",
+      "Epoch 7, Training Loss: 7.656640315290742\n",
+      "Epoch 7, Validation Loss: 7.116040314021318\n",
+      "Average Parameter Absolute Value: 0.10131\n",
+      "Average Gradient Absolute Value: 0.64821\n",
+      "Epoch 8, Training Loss: 6.73411128526838\n",
+      "Epoch 8, Validation Loss: 6.2484422462142035\n",
+      "Average Parameter Absolute Value: 0.10284\n",
+      "Average Gradient Absolute Value: 0.64555\n",
+      "Epoch 9, Training Loss: 5.968552106853776\n",
+      "Epoch 9, Validation Loss: 5.529894440718319\n",
+      "Average Parameter Absolute Value: 0.10419\n",
+      "Average Gradient Absolute Value: 0.63956\n",
+      "Epoch 10, Training Loss: 5.577630973361396\n",
+      "Epoch 10, Validation Loss: 5.1118195367896035\n",
+      "Average Parameter Absolute Value: 0.10535\n",
+      "Average Gradient Absolute Value: 0.63222\n",
+      "Epoch 11, Training Loss: 5.430902654754704\n",
+      "Epoch 11, Validation Loss: 4.890230030469272\n",
+      "Average Parameter Absolute Value: 0.10642\n",
+      "Average Gradient Absolute Value: 0.60144\n",
+      "Epoch 12, Training Loss: 5.340105187276314\n",
+      "Epoch 12, Validation Loss: 4.78265865859778\n",
+      "Average Parameter Absolute Value: 0.10762\n",
+      "Average Gradient Absolute Value: 0.57136\n",
+      "Epoch 13, Training Loss: 5.178417874160658\n",
+      "Epoch 13, Validation Loss: 4.642830077720725\n",
+      "Average Parameter Absolute Value: 0.10888\n",
+      "Average Gradient Absolute Value: 0.56777\n",
+      "Epoch 14, Training Loss: 5.016281172045933\n",
+      "Epoch 14, Validation Loss: 4.526895633372276\n",
+      "Average Parameter Absolute Value: 0.11018\n",
+      "Average Gradient Absolute Value: 0.54390\n",
+      "Epoch 15, Training Loss: 4.849816450344518\n",
+      "Epoch 15, Validation Loss: 4.423674625870974\n",
+      "Average Parameter Absolute Value: 0.11159\n",
+      "Average Gradient Absolute Value: 0.50733\n",
+      "Epoch 16, Training Loss: 4.661645713551291\n",
+      "Epoch 16, Validation Loss: 4.321224819706834\n",
+      "Average Parameter Absolute Value: 0.11312\n",
+      "Average Gradient Absolute Value: 0.52330\n",
+      "Epoch 17, Training Loss: 4.391505574945159\n",
+      "Epoch 17, Validation Loss: 4.225698287720266\n",
+      "Average Parameter Absolute Value: 0.11451\n",
+      "Average Gradient Absolute Value: 0.52496\n",
+      "Epoch 18, Training Loss: 4.1623645245001235\n",
+      "Epoch 18, Validation Loss: 4.207033822069997\n",
+      "Average Parameter Absolute Value: 0.11580\n",
+      "Average Gradient Absolute Value: 0.49590\n",
+      "Epoch 19, Training Loss: 3.9935854556672092\n",
+      "Epoch 19, Validation Loss: 4.122932559770087\n",
+      "Average Parameter Absolute Value: 0.11693\n",
+      "Average Gradient Absolute Value: 0.46494\n",
+      "Epoch 20, Training Loss: 3.865244133572273\n",
+      "Epoch 20, Validation Loss: 4.073790147252705\n",
+      "Average Parameter Absolute Value: 0.11795\n",
+      "Average Gradient Absolute Value: 0.44046\n",
+      "Epoch 21, Training Loss: 3.74502009322197\n",
+      "Epoch 21, Validation Loss: 4.026884014191835\n",
+      "Average Parameter Absolute Value: 0.11902\n",
+      "Average Gradient Absolute Value: 0.40139\n",
+      "Epoch 22, Training Loss: 3.655839012320993\n",
+      "Epoch 22, Validation Loss: 3.971579315221828\n",
+      "Average Parameter Absolute Value: 0.12012\n",
+      "Average Gradient Absolute Value: 0.37657\n",
+      "Epoch 23, Training Loss: 3.5523612819281705\n",
+      "Epoch 23, Validation Loss: 3.902577748765116\n",
+      "Average Parameter Absolute Value: 0.12129\n",
+      "Average Gradient Absolute Value: 0.34330\n",
+      "Epoch 24, Training Loss: 3.431288547189952\n",
+      "Epoch 24, Validation Loss: 3.9450483840444814\n",
+      "Average Parameter Absolute Value: 0.12242\n",
+      "Average Gradient Absolute Value: 0.33067\n",
+      "Epoch 25, Training Loss: 3.344607178800799\n",
+      "Epoch 25, Validation Loss: 3.9474541253369786\n",
+      "Average Parameter Absolute Value: 0.12356\n",
+      "Average Gradient Absolute Value: 0.30115\n",
+      "Epoch 26, Training Loss: 3.2767201990182766\n",
+      "Epoch 26, Validation Loss: 3.9916533283565356\n",
+      "Average Parameter Absolute Value: 0.12470\n",
+      "Average Gradient Absolute Value: 0.28008\n",
+      "Epoch 27, Training Loss: 3.2067287941577987\n",
+      "Epoch 27, Validation Loss: 4.057172694931859\n",
+      "Average Parameter Absolute Value: 0.12587\n",
+      "Average Gradient Absolute Value: 0.25709\n",
+      "Epoch 28, Training Loss: 3.164974234080667\n",
+      "Epoch 28, Validation Loss: 4.068409313974173\n",
+      "Early stopping!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LSTM(\n",
+       "  (lstm): LSTM(16, 32, batch_first=True)\n",
+       "  (dropout): Dropout(p=0.01, inplace=False)\n",
+       "  (fc): Sequential(\n",
+       "    (0): Dropout(p=0.01, inplace=False)\n",
+       "    (1): Linear(in_features=32, out_features=32, bias=True)\n",
+       "    (2): Dropout(p=0.01, inplace=False)\n",
+       "    (3): Linear(in_features=32, out_features=1, bias=True)\n",
+       "    (4): Softplus(beta=1.0, threshold=20.0)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = md.Forecaster()\n",
+    "train_loader, val_loader, input_scaling, input_time_scaling = f.format_lstm_data(clean_data, sequence_length=24*7*3, batch_size=100, forecasting_steps_ahead=24, proportion_validation=0.1)\n",
+    "lstm = md.LSTM(input_size=train_loader.dataset[0][0].shape[-1]+train_loader.dataset[0][1].shape[-1], hidden_size=32, num_layers=1, output_size=1, dropout=0.01).to(device=\"cuda\")\n",
+    "f.fit_lstm(lstm, train_loader=train_loader, val_loader=val_loader, device=\"cuda\", verbose=True)"
+   ]
   },
   {
    "cell_type": "code",
